--- a/Movies.Api/appsettings.json
+++ b/Movies.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MovieDb;User Id=sa;Password=Shubham@8686$;TrustServerCertificate=True;"
+  }
 }
