-- add identity helper

--- a/Movies.Api/appsettings.json
+++ b/Movies.Api/appsettings.json
@@ -6,7 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MovieDb;User Id=sa;Password=Shubham@8686$;TrustServerCertificate=True;"
+  "Database": {
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MovieDb;User Id=sa;Password=Shubham@8686$;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "ForTheLoveOfGodStoreAndLoadThisSecurely",
+    "Issuer": "https://id.nickchapsas.com",
+    "Audience": "https://movies.nickchapsas.com"
   }
 }
