-- add db scripts excetions

--- a/Movies.Api/Movies.Api.csproj
+++ b/Movies.Api/Movies.Api.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Movies.Contracts\Movies.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Scripts\" />
+  </ItemGroup>
+
 </Project>
