--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,18 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: Get Code
-      uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
-    - name: Build Docker Image
-      run: docker build -t movies.api -f Movies.Api/Dockerfile .
+      - name: Set up Docker
+        run: docker --version
+
+      - name: Stop existing containers
+        run: docker-compose down
+        continue-on-error: true
+
+      - name: Build & run containers
+        run: docker-compose up -d --build
+
+      - name: Verify containers
+        run: docker ps
