--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     container_name: movies_db
     environment:
       - ACCEPT_EULA=Y
-      - SA_PASSWORD=Your_strong!Passw0rd   # use secrets in production
+      - SA_PASSWORD=Shubham@8686$  # use secrets in production
     ports:
       - "1433:1433"
     volumes:
